# BestHack_2

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  embdb.csv  example.env  main.py  ml.md  pyproject.toml  ruff.toml
alembic/: Makefile  env.py
alembic/versions/: 0aa8a2de2a12_add_word.py  63d2296e190a_init.py
app/: asgi.py  config.py  storage.py
app/ai/: core.py  parce.py
app/api/: db.py  index.py  models.py  register.py
app/db/: crud.py  engine.py  schema.py
app/static/: index.html  styles.css
app/static/js/: app.js
app/static/js/components/: SearchForm.js  SearchResults.js
app/static/js/services/: MapService.js
output_model/: README.md  model.safetensors
