[project]
name = "besthack-2"
version = "0.1.0"
description = ""
authors = [
    {name = "breakcore-chan",email = "sergejglebov25@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.121.2,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
pyright = "^1.1.407"

