[project]
name = "besthack-2"
version = "0.1.0"
description = ""
authors = [
    {name = "breakcore-chan",email = "sergejglebov25@gmail.com"}
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[all] (>=0.121.2,<0.122.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
pyright = "^1.1.407"

